2011-01-20  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/47167
	* tree-ssa-copyrename.c (copy_rename_partition_coalesce):
	Revert previous change, only avoid enumeral type changes.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169050 138bc75d-0d04-0410-961f-82ee72b054a4